logs/dippy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dippy'...
Listing './lib/python3.5/site-packages/dippy/dependency'...
Listing './lib/python3.5/site-packages/dippy/env'...
Listing './lib/python3.5/site-packages/dippy/example'...
Listing './lib/python3.5/site-packages/dippy/example/api'...
Listing './lib/python3.5/site-packages/dippy/example/download'...
Listing './lib/python3.5/site-packages/dippy/example/json'...
Listing './lib/python3.5/site-packages/dippy/example/render'...
Listing './lib/python3.5/site-packages/dippy/example/search'...
Listing './lib/python3.5/site-packages/dippy/library'...
Listing './lib/python3.5/site-packages/dippy/util'...
Compiling './lib/python3.5/site-packages/dippy/util/tdd.py'...
***   File "./lib/python3.5/site-packages/dippy/util/tdd.py", line 12
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dippy-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
